<resources>
    <!-- System Defaults -->
    <string name="app_name">MitoProducts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Side Menu -->
    <string name="menu_products">Productos</string>
    <string name="menu_orders">Pedidos</string>
    <string name="menu_shopping_cart">Carro de compras</string>
    <string name="menu_sign_out">Cerrar sesión</string>

    <!-- Mobile Navigation   -->
    <string name="str_label_product_detail_fragment">Detalle del producto</string>
    <string name="str_label_order_fragment">Pedidos</string>
    <string name="str_label_order_detail_fragment">Detalle de tu pedido</string>
    <string name="str_label_shopping_cart">Carro de compras</string>
    <string name="add_to_shopping_cart">Agregar al carrito</string>

    <!-- Login Screen   -->
    <string name="str_label_username">Nombre de usuario</string>
    <string name="str_label_password">Contraseña</string>
    <string name="str_button_login">LOGIN</string>
    <string name="str_button_facebook">Inicia sesión con Facebook</string>
    <string name="str_label_not_account_yet"><u>¿No tienes cuenta? Registrate aquí</u></string>

    <!--  REGISTER SCREEN  -->
    <string name="str_label_name">Nombre</string>
    <string name="str_label_lastname">Apellido</string>
    <string name="str_label_address">Dirección</string>
    <string name="str_label_phone">Fono</string>
    <string name="str_label_email">e-mail</string>
    <string name="str_label_password_confirm">Confirmar contraseña</string>
    <string name="str_label_already_have_an_account"><u>Si tienes una cuenta puedes ingresar aquí</u></string>
    <string name="str_button_register">REGISTRARSE</string>

</resources>