<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/nav_home"-->
<!--            android:icon="@drawable/ic_menu_camera"-->
<!--            android:title="@string/menu_home" />-->

        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_outline_storefront_24"
            android:title="@string/menu_products" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_outline_view_list_24"
            android:title="@string/menu_orders" />

        <item
            android:id="@+id/nav_shopping_cart"
            android:icon="@drawable/ic_outline_shopping_cart_24"
            android:title="@string/menu_shopping_cart" />
    </group>
    <group android:id="@+id/group_options"
           android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_sign_out" />
    </group>
</menu>