<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:scrollbars="none"
    tools:context=".ui.authentication.fragments.RegisterFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/grey"
        android:elevation="15dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">

            <!--  USERNAME       -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:hint="@string/str_label_username"
                app:startIconDrawable="@drawable/ic_baseline_verified_user_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="textNoSuggestions"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--  NAME       -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:hint="@string/str_label_name"
                app:startIconDrawable="@drawable/ic_outline_person_outline_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--  LAST NAME       -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:hint="@string/str_label_lastname"
                app:startIconDrawable="@drawable/ic_outline_person_outline_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--  ADDRESS       -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:hint="@string/str_label_address"
                app:startIconDrawable="@drawable/ic_outline_location_on_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--  PHONE       -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:hint="@string/str_label_phone"
                app:startIconDrawable="@drawable/ic_outline_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--  EMAIL      -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:hint="@string/str_label_email"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--  PASSWORD     -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:hint="@string/str_label_password"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_outline_vpn_key_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="textNoSuggestions|textPassword"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--  BUTTONS          -->
            <Button
                android:id="@+id/button_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="14dp"
                android:text="@string/str_button_register" />

            <TextView
                android:id="@+id/text_view_have_an_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/str_label_already_have_an_account"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>
